# react-native-photo-manipulator

./: package.json  tsconfig.build.json
harmony/: photo_manipulator.har
harmony/photo_manipulator/: index.ets  oh-package-lock.json5  oh-package.json5  ts.ts
harmony/photo_manipulator/src/main/: module.json5
harmony/photo_manipulator/src/main/cpp/: CMakeLists.txt  RNPhotoManipulatorPackage.h
harmony/photo_manipulator/src/main/ets/: CropUtil.ts  ErrorCode.ts  FlipImageUtils.ts  Logger.ts  OptimizeUtils.ts  OverlayUtil.ts  PhotoManipulatorError.ts  PhotoManipulatorPackage.ts  PhotoManipulatorTurboModule.ts  PrintTextUtils.ts  RNImageSRC.ts  RegionItem.ts  RotateImageUtil.ts  ShadowLayerStyle.ts  TextOptions.ts  TextStyle.ts  Utils.ts
harmony/photo_manipulator/src/ohosTest/: module.json5
